# numeral

./: Cargo.toml  README.md
benches/: lib.rs
src/: lib.rs
tests/: lib.rs  ordinal_m256...256.txt  ordinal_m256..257.txt  ordinal_min_max.txt
