[package]
name = "numeral"
version = "0.1.2"
authors = ["Letheed <dev@daweb.se>"]
description = "Written english form of a number"
documentation = "https://letheed.github.io/numeral"
repository = "https://github.com/letheed/numeral"
readme = "README.md"
keywords = ["number", "numeral", "written", "word", "ordinal"]
license = "MPL-2.0"
