[package]
name = "numeral"
version = "0.2.0"
authors = ["Letheed <dev@daweb.se>"]
description = "Written english form of a number"
documentation = "https://docs.rs/numeral"
repository = "https://github.com/letheed/numeral"
readme = "README.md"
keywords = ["number", "numeral", "written", "word", "cardinal"]
license = "MPL-2.0"
